Bump ui-designer version (#2812)
* remove guava dependencies from la-builder
* update uid version

Co-authored-by: Romain Bioteau <romain.bioteau@bonitasoft.com>